--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.76.1",
     "framer-motion": "^12.11.3",
     "next": "15.3.2",
     "react": "^19.0.0",
